# TP_ACSO

./: CMakeLists.txt
TP2-x86_64/bomb26/: ID  README  bomb  bomb.c  input.txt  palabras.txt  respuestas_descripcion.txt
TP2-x86_64/ej1/: ej1.asm  ej1.c  main  tester
TP3-FileSystem/: directory.c  file.c  inode.c  pathname.c
TP4-Shell/src/ej1/: ring.c  tester.c  tester.sh
TP4-Shell/src/ej2/: shell.c
TP5-ThreadPool/src/: thread-pool.cc
